# pyo3-release-test

./: .gitignore  CHANGELOG.md  Cargo.toml  cliff.toml  pyproject.toml
.github/workflows/: CI.yml  rust-tests.yml  rustfmt.yml  test.yml
python/guessing_game/: __init__.py  main.py
src/: lib.rs
